<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="beginning|middle|end">

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/_64"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/_93"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/_98"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/_122"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableLayout
        android:id="@+id/content_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:padding="20dip"
                android:text="@string/dashes"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/holo_green_dark"
        android:elevation="17dp"
        android:fadingEdgeLength="@android:dimen/app_icon_size"
        android:text="@string/check"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>